--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 
-<!DOCTYPE html>
+
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Trans Servis Don LLC</title>
-  <meta name="google-site-verification" content="googleb941dc1a024f4900.html" />
+  <meta name="google-site-verification" content="mRWiXzpsNLUKh6aSIdUluGTjX34EWdfvtcJQGfKYVc0" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://raw.githubusercontent.com/sandbox-transservisdon/assets/main/logo-bg-dark.png') no-repeat center center fixed;
+      background: url('https://raw.githubusercontent.com/transservisdon2008/transservisdon2008/main/bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
+
     .overlay {
       background-color: rgba(0, 0, 0, 0.7);
       min-height: 100vh;
@@ -21,6 +23,7 @@
       justify-content: center;
       align-items: center;
     }
+
     .content {
       max-width: 700px;
       background: rgba(255, 255, 255, 0.05);
@@ -29,15 +32,35 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.6);
       backdrop-filter: blur(4px);
     }
+
     h1 {
       text-align: center;
-      color: #ffd700;
       margin-bottom: 20px;
     }
-    p, ul {
-      line-height: 1.6;
+
+    p {
       font-size: 16px;
+      margin-bottom: 10px;
     }
+
+    strong {
+      color: #ffcc00;
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay">
+    <div class="content">
+      <h1>Trans Servis Don LLC</h1>
+      <p><strong>Services:</strong> Customs and Logistics Consulting</p>
+      <p><strong>Email:</strong> transservisdon@gmail.com</p>
+      <p><strong>Languages:</strong> English, Russian, Armenian</p>
+      <p><strong>Director:</strong> Mnatsakanyan Martunik</p>
+      <p><strong>Address:</strong> 0501, Aragatsotn Province, Talin Town, M. Kotanyan St, Bldg 11, Apt 41, Armenia</p>
+    </div>
+  </div>
+</body>
+</html>
     strong {
       color: #ffffff;
     }
