--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trans Servis Don LLC Armenia</title>
-  <meta name="description" content="Trans Servis Don LLC Armenia — customs and logistics services based in Talin, Aragatsotn Province.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="mRWiXzpsNLUKh6aSIdUluGTjX34EWdfvtcJQGfKYVc0" />
+  <meta name="description" content="Trans Servis Don LLC Armenia — customs and logistics company in Talin, Aragatsotn Province. We provide transport, delivery, and customs services across Armenia." />
+  <title>Trans Servis Don LLC Armenia</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://raw.githubusercontent.com/transservisdon2008/transservisdon2008.github.io/main/background.jpg') no-repeat center center fixed;
+      background: url('https://raw.githubusercontent.com/transservisdon2008/transservisdon2008.github.io/main/logo-bg.png');
       background-size: cover;
       color: #fff;
     }
@@ -30,11 +30,13 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.6);
       backdrop-filter: blur(4px);
     }
-    h1, h2, p {
-      text-align: center;
-    }
     h1 {
-      color: #00d8ff;
+      text-align: center;
+      color: #fff;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.6;
     }
     strong {
       color: #fff;
@@ -44,13 +46,12 @@
 <body>
   <div class="overlay">
     <div class="content">
-      <h1>Trans Servis Don LLC</h1>
-      <h2>Armenia | Customs & Logistics</h2>
-      <p><strong>Registered in:</strong> Talin, Aragatsotn Province, Armenia</p>
-      <p><strong>Services:</strong> Customs clearance, Logistics, Translation, Consulting</p>
-      <p><strong>Director:</strong> Martunik Mnatsakanyan</p>
+      <h1>Trans Servis Don LLC Armenia</h1>
+      <p><strong>Services:</strong> Customs and logistics operations, transport and delivery support across Armenia and abroad.</p>
+      <p><strong>Location:</strong> Talin, Aragatsotn Province, Republic of Armenia</p>
       <p><strong>Email:</strong> transservisdon@gmail.com</p>
       <p><strong>Languages:</strong> English, Russian, Armenian</p>
+      <p><strong>Director:</strong> Martunik Mnatsakanyan</p>
     </div>
   </div>
 </body>
