--- a/index.html
+++ b/index.html
@@ -4,55 +4,87 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="mRWiXzpsNLUKh6aSIdUluGTjX34EWdfvtcJQGfKYVc0" />
-  <meta name="description" content="Trans Servis Don LLC Armenia — customs and logistics company in Talin, Aragatsotn Province. We provide transport, delivery, and customs services across Armenia." />
+  <meta name="description" content="Trans Servis Don LLC Armenia — customs and logistics services based in Talin, Aragatsotn Province.">
   <title>Trans Servis Don LLC Armenia</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://raw.githubusercontent.com/transservisdon2008/transservisdon2008.github.io/main/logo-bg.png');
-      background-size: cover;
+      background: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: #2c3e50;
       color: #fff;
-    }
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.7);
-      min-height: 100vh;
-      padding: 40px 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .content {
-      max-width: 700px;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-      backdrop-filter: blur(4px);
-    }
-    h1 {
+      padding: 20px 0;
       text-align: center;
-      color: #fff;
     }
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-    }
-    strong {
+    nav a {
       color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    .card {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 30px;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #2c3e50;
+      color: #fff;
+      font-size: 14px;
+    }
+    h1, h2 {
+      color: #2c3e50;
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <div class="content">
-      <h1>Trans Servis Don LLC Armenia</h1>
-      <p><strong>Services:</strong> Customs and logistics operations, transport and delivery support across Armenia and abroad.</p>
-      <p><strong>Location:</strong> Talin, Aragatsotn Province, Republic of Armenia</p>
-      <p><strong>Email:</strong> transservisdon@gmail.com</p>
-      <p><strong>Languages:</strong> English, Russian, Armenian</p>
-      <p><strong>Director:</strong> Martunik Mnatsakanyan</p>
-    </div>
-  </div>
+
+  <header>
+    <h1>Trans Servis Don LLC Armenia</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about" class="card">
+    <h2>About Us</h2>
+    <p>Trans Servis Don LLC is a logistics and customs service company based in Talin, Aragatsotn Province, Republic of Armenia. We provide transport and delivery support throughout Armenia and abroad.</p>
+  </section>
+
+  <section id="services" class="card">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Customs clearance</li>
+      <li>International and local transportation</li>
+      <li>Logistics consulting</li>
+      <li>Document assistance for customs</li>
+    </ul>
+  </section>
+
+  <section id="contact" class="card">
+    <h2>Contact</h2>
+    <p><strong>Location:</strong> Talin, Aragatsotn Province, Republic of Armenia</p>
+    <p><strong>Email:</strong> transservisdon@gmail.com</p>
+    <p><strong>Languages:</strong> English, Russian, Armenian</p>
+    <p><strong>Director:</strong> Martunik Mnatsakanyan</p>
+  </section>
+
+  <footer>
+    &copy; 2025 Trans Servis Don LLC Armenia. All rights reserved.
+  </footer>
+
 </body>
 </html>
